# Forge

./: Cargo.toml  README.md
src/: main.rs  template.rs
src/commands/: build.rs  install.rs  mod.rs  run.rs
src/cpp/: cli.rs
src/utility/: helper.rs  mod.rs  registry.rs
src/utils/: helper.rs
templates/app/: CMakeLists.txt
templates/app/src/: main.cpp
templates/lib/: CMakeLists.txt
templates/lib/include/: lib.hpp
templates/lib/src/: lib.cpp
