[package]
name = "oxidizer"
version = "0.1.0"
edition = "2021"
authors = ["Pratham Srivastava <github: github.com/pratham-srivastava-07>"]
description = "A powerful CLI tool to initialize, build, run, and manage C++ projects"
license = "MIT"
repository = "https://github.com/pratham-srivastava-07/oxidizer"
categories = ["command-line-utilities", "development-tools"]
keywords = ["cpp", "cli", "build-tool", "project-manager"]
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rust-embed = "8.3.0"